--- a/fundamentos/bloco3-introducao-a-html-e-css/dia4-html-semantico/exercises/exercise1/style.css
+++ b/fundamentos/bloco3-introducao-a-html-e-css/dia4-html-semantico/exercises/exercise1/style.css
@@ -41,7 +41,7 @@ header nav ul li{
 
 header nav a{
 
-  color: #3C8DC3;
+  color: #ffff;
   padding: 10px;
   border-radius: 10px;
   margin: 0px 20px 0px 20px;
