--- a/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia3-css-flexbox-parte-1/exercises/exercise-tech-gallery/style.css
+++ b/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia3-css-flexbox-parte-1/exercises/exercise-tech-gallery/style.css
@@ -17,3 +17,11 @@
   width: 25px;
   margin-left: 10px;
 }
+
+header {
+  background-color: rgb(50,52,51);
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
