Exercício 02 dos exercícios --> Finalizado.

--- a/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia3-css-flexbox-parte-1/exercises/exercise-tech-gallery/style.css
+++ b/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia3-css-flexbox-parte-1/exercises/exercise-tech-gallery/style.css
@@ -25,3 +25,11 @@ header {
   justify-content: space-around;
   align-items: center;
 }
+
+.introduction {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+}
+
