Adicionando primeira div

--- a/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia5-responsivo-mobile-first/conteudo/style.css
+++ b/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia5-responsivo-mobile-first/conteudo/style.css
@@ -67,6 +67,10 @@ p strong {
 }
 
 @media screen and (max-width: 500px) {
+  .cards .card:nth-child(1) {
+    display: flex;
+  }
+
   p.trick {
     color: black;
   }
