Adicionando regras da terceira div

--- a/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia5-responsivo-mobile-first/conteudo/style.css
+++ b/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia5-responsivo-mobile-first/conteudo/style.css
@@ -81,3 +81,12 @@ p strong {
     display: flex;
   }
 }
+
+@media screen and (max-width: 649px), (min-width: 951px) {
+  .cards .card:nth-child(3) {
+    display: flex;
+  }
+}
+
+
+
