Tornando o conteudo que nao estava aparecendo visivel alterando a propriedade do overflow

--- a/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia5-responsivo-mobile-first/conteudo/style.css
+++ b/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia5-responsivo-mobile-first/conteudo/style.css
@@ -67,6 +67,11 @@ p strong {
 }
 
 @media screen and (max-width: 500px) {
+  body {
+    overflow: visible;
+  }
+
+
   .cards .card:nth-child(1) {
     display: flex;
   }
