--- a/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia5-responsivo-mobile-first/exercises/exercise1.css
+++ b/fundamentos/bloco6-html-e-css-forms-flexbox-responsivo/dia5-responsivo-mobile-first/exercises/exercise1.css
@@ -1,17 +1,31 @@
-body {
-
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-h1 {
 
+body {
+  font-size: 1.1em;
+  margin: 10px;
+}
+
+h1, h2 {
+  margin-bottom: 10px;
+}
+
+h1 {
+ font-size: 1.4em;
 }
 h2 {
-
+ font-size: 1.3em;
+ margin-top: 10px;
 }
 
 img {
-    max-width: 100%;
+ max-width: 100%;
+ border-radius: 3px;
 }
 
 figure {
-    margin: 0;
+  margin-bottom: 20px;
 }
